bmt-stickers/bmt-stickers_v1_Service_stickers.yaml
apiVersion: v1
kind: Service
metadata:
  name: stickers
  namespace: bmt-stickers
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: stickers
